[package]
name = "vertex"
version = "0.1.0"
authors = ["f1shl3gs"]
edition = "2024"
description = "A lightweight and ultra-fast tool for building observability pipelines"
repository = "https://github.com/f1shl3gs/vertex"
publish = false
rust-version = "1.85"
exclude = [
    "tests/node"
]

# This profile optimizes for runtime performance and small binary size at the expense of longer
# build times. It's most suitable for final release builds.
[profile.release]
debug = false
lto = "thin"

# This profile optimizes for short build times at the expense of larger binary size and slower
# runtime performance.
[profile.dev]
lto = false
incremental = true

[profile.bench]
debug = true

[workspace]
members = [
    "lib/backoff",
    "lib/buffers",
    "lib/codecs",
    "lib/configurable",
    "lib/configurable-derive",
    "lib/event",
    "lib/finalize",
    "lib/framework",
    "lib/hostname",
    "lib/jaeger",
    "lib/kubernetes",
    "lib/log_schema",
    "lib/bytesize",
    "lib/metrics",
    "lib/multiline",
    "lib/ntp",
    "lib/prometheus",
    "lib/sysinfo",
    "lib/tail",
    "lib/testify",
    "lib/tracing-internal",
    "lib/tracing-limit",
    "lib/tripwire",
    "lib/value",
    "lib/virt",
    "lib/vtl",
    "lib/tracked_alloc"
]

[features]
default = [
    # "snmalloc",

    "extensions",
    "sources",
    "transforms",
    "sinks",
]

target-x86_64-unknown-linux-musl = [
    # The default allocator of musl will consume more cpu than jemalloc.
    "mimalloc",

    "extensions",
    "sinks",
    "sources",
    "transforms",
]

target-x86_64-unknown-linux-gnu = [
    "extensions",
    "sinks",
    "sources",
    "transforms",
]

benches = [
    "sources-node_metrics",
    "sources-haproxy",
    "sinks-loki"
]

# Integration tests
clickhouse-integration-tests = []
consul-integration-tests = []
dnstap-integration-tests = []
elasticsearch-integration-tests = []
fluent-integration-tests = []
haproxy-integration-tests = []
kafka-integration-tests = []
loki-integration-tests = []
memcached-integration-tests = []
mysql-integration-tests = []
nginx_stub-integration-tests = []
ntp-integration-tests = []
prometheus_exporter_integration-tests = []
prometheus_remote_write_integration-tests = []
prometheus_scrape_integration-tests = []
redfish-integration-tests = []
redis-integration-tests = []
zookeeper-integration-tests = []

all-integration-tests = [
    "consul-integration-tests",
    "elasticsearch-integration-tests",
    "haproxy-integration-tests",
    "kafka-integration-tests",
    "memcached-integration-tests",
    "mysql-integration-tests",
    "nginx_stub-integration-tests",
    "ntp-integration-tests",
    "prometheus_exporter_integration-tests",
    "prometheus_remote_write_integration-tests",
    "prometheus_scrape_integration-tests",
    "dnstap-integration-tests",
    "loki-integration-tests",
    "redis-integration-tests",
    "zookeeper-integration-tests",
    "clickhouse-integration-tests",
    "fluent-integration-tests",
    "redfish-integration-tests",
]

extensions-consul_observer = []
extensions-dns_observer = ["dep:hickory-resolver"]
extensions-heartbeat = ["dep:uuid", "dep:sysinfo", "dep:parking_lot"]
extensions-healthcheck = []
extensions-http = []
extensions-kubernetes_observer = ["dep:kubernetes"]
extensions-port_observer = []
extensions-pprof = ["dep:pprof"]
extensions-zpages = ["dep:parking_lot"]

# Extensions
extensions = [
    "extensions-consul_observer",
    "extensions-dns_observer",
    "extensions-healthcheck",
    "extensions-heartbeat",
    "extensions-http",
    "extensions-kubernetes_observer",
    "extensions-port_observer",
    # Musl does not provide "pthread_getname_np" in current release.
    # https://github.com/tikv/pprof-rs/issues/41
    "extensions-pprof",
    "extensions-zpages"
]

# Sources
sources-bind = []
sources-chrony = []
sources-consul = []
sources-demo_logs = []
sources-dnstap = []
sources-dpdk = []
sources-exec = ["tokio/process"]
sources-clickhouse_metrics = []
sources-elasticsearch = []
sources-filestats = []
sources-fluent = ["dep:flate2"]
sources-grpc_check = ["tonic/channel", "dep:tonic-health"]
sources-haproxy = []
sources-http = []
sources-http_check = ["dep:httpdate"]
sources-internal_logs = []
sources-internal_metrics = []
sources-internal_traces = []
sources-jaeger = ["dep:jaeger", "tonic/server"]
sources-journald = []
sources-kafka = ["dep:rskafka", "dep:async-stream"]
sources-kafka_metrics = ["dep:rskafka"]
sources-kmsg = []
sources-kubernetes_logs = ["dep:tail", "dep:multiline", "kubernetes", "dep:ahash", "dep:parking_lot"]
sources-kubernetes_events = ["kubernetes"]
sources-libvirt = ["dep:virt"]
sources-memcached = []
sources-mongodb = []
sources-mqtt = []
sources-multiplier = []
sources-mysqld = ["dep:sqlx"]
sources-netflow = []
sources-nginx_stub = []
sources-node_metrics = ["dep:libc"]
sources-ntp = ["dep:ntp"]
sources-nvidia_smi = ["dep:quick-xml"]
sources-ping = ["dep:socket2", "dep:parking_lot"]
sources-prometheus_pushgateway = ["dep:base64"]
sources-prometheus_scrape = ["dep:prometheus"]
sources-prometheus_remote_write = ["dep:snap"]
sources-redfish = []
sources-redis = []
sources-selfstat = ["dep:libc"]
sources-sflow = []
sources-socket = []
sources-static_metrics = []
sources-syslog = ["codecs/syslog"]
sources-tail = ["dep:tail", "dep:multiline", "dep:encoding_rs"]
sources-zookeeper = []

sources = [
    "sources-bind",
    "sources-chrony",
    "sources-consul",
    "sources-clickhouse_metrics",
    "sources-demo_logs",
    "sources-dnstap",
    "sources-dpdk",
    "sources-elasticsearch",
    "sources-exec",
    "sources-filestats",
    "sources-fluent",
    "sources-grpc_check",
    "sources-haproxy",
    "sources-http",
    "sources-http_check",
    "sources-internal_logs",
    "sources-internal_metrics",
    "sources-internal_traces",
    "sources-jaeger",
    "sources-journald",
    "sources-kafka",
    "sources-kafka_metrics",
    "sources-kmsg",
    "sources-kubernetes_events",
    "sources-kubernetes_logs",
    "sources-libvirt",
    "sources-memcached",
    "sources-mongodb",
    "sources-mqtt",
    "sources-multiplier",
    "sources-mysqld",
    "sources-netflow",
    "sources-nginx_stub",
    "sources-node_metrics",
    "sources-ntp",
    "sources-nvidia_smi",
    "sources-ping",
    "sources-prometheus_pushgateway",
    "sources-prometheus_scrape",
    "sources-prometheus_remote_write",
    "sources-redfish",
    "sources-redis",
    "sources-selfstat",
    "sources-sflow",
    "sources-socket",
    "sources-static_metrics",
    "sources-syslog",
    "sources-tail",
    "sources-zookeeper",
]

transforms-cardinality = ["dep:dashmap", "dep:sbbf"]
transforms-dedup = ["dep:lru"]
transforms-filter = []
transforms-geoip = ["dep:maxminddb"]
transforms-metricalize = ["dep:async-stream"]
transforms-relabel = ["dep:md-5"]
transforms-rewrite = []
transforms-route = []
transforms-sample = ["dep:ahash"]
transforms-throttle = ["dep:gcra"]

# transforms
transforms = [
    "transforms-cardinality",
    "transforms-dedup",
    "transforms-filter",
    "transforms-geoip",
    "transforms-metricalize",
    "transforms-relabel",
    "transforms-rewrite",
    "transforms-route",
    "transforms-sample",
    "transforms-throttle"
]

# Sinks
sinks-blackhole = []
sinks-clickhouse = []
sinks-console = ["tokio/io-std"]
sinks-elasticsearch = []
sinks-http = []
sinks-influxdb = []
sinks-jaeger = ["dep:jaeger"]
sinks-kafka = ["dep:rskafka"]
sinks-loki = ["dep:snap", "dep:buffers"]
sinks-prometheus_exporter = ["dep:flate2", "dep:parking_lot"]
sinks-prometheus_remote_write = ["dep:snap"]
sinks-skywalking = ["tonic/gzip", "tonic/zstd", "tonic/transport", "tonic/codegen"]
sinks-socket = []

sinks = [
    "sinks-blackhole",
    "sinks-clickhouse",
    "sinks-console",
    "sinks-elasticsearch",
    "sinks-http",
    "sinks-influxdb",
    "sinks-jaeger",
    "sinks-kafka",
    "sinks-loki",
    "sinks-prometheus_exporter",
    "sinks-prometheus_remote_write",
    "sinks-skywalking",
    "sinks-socket",
]

# Common
tokio-console = ["framework/tokio-console", "tokio/tracing"]

# Allocator
# mimalloc is an optional dependecy, and the feature `mimalloc` is created by default. So no
# need to declare it again.
jemalloc = [
    "dep:tikv-jemallocator",
    "tikv-jemalloc-ctl/stats",
    "tikv-jemalloc-ctl/profiling"
]
snmalloc = [ "dep:snmalloc-rs" ]
tracked_alloc = [ "dep:tracked_alloc", "dep:snmalloc-rs" ]

# Enables kubernetes dependencies and shared code. Kubernetes-related sources,
# transforms and sinks should depend on this feature.
kubernetes = ["dep:k8s-openapi", "dep:kube"]

bench = [
    "sinks-loki",
    "sources-haproxy",
    "sources-node_metrics",
]

[[bench]]
name = "loki"
harness = false
path = "benches/loki.rs"
required-features = ["sinks-loki"]

[[bench]]
name = "hwmon_gather"
harness = false
path = "benches/node_source_hwmon.rs"
required-features = ["sources-node_metrics"]

[[bench]]
name = "haproxy"
harness = false
path = "benches/haproxy.rs"
required-features = ["sources-haproxy"]

[[test]]
name = "socket"
required-features = ["sinks-socket"]

[[test]]
name = "syslog"
required-features = ["sinks-socket"]

[build-dependencies]
prost-build = { version = "0.13.5", default-features = false }
tonic-build = { version = "0.12.3", default-features = false, features = ["prost", "transport"] }

[dev-dependencies]
base64 = { version = "0.22.1", default-features = false }
criterion = { version = "0.5.1", default-features = false, features = ["async_tokio"] }
event = { path = "lib/event", features = ["test"] }
framework = { path = "lib/framework", features = ["test-util"] }
pretty_assertions = { version = "1.4.1", default-features = false, features = ["std"] }
serde_path_to_error = { version = "0.1.17", default-features = false }
testify = { path = "lib/testify" }
tokio = { version = "1.44.1", default-features = false, features = ["test-util"] }
tonic = { version = "0.12.3", default-features = false, features = ["server"]}

[dependencies]
# Workspaces
buffers = { path = "lib/buffers", optional = true }
codecs = { path = "lib/codecs" }
configurable = { path = "lib/configurable" }
event = { path = "lib/event" }
framework = { path = "lib/framework" }
hostname = { path = "lib/hostname" }
humanize = { git = "https://github.com/f1shl3gs/humanize", default-features = false, features = ["bytes", "serde"], rev = "3ce391414e9417c36ca386b50ef82e6d2e1882dd" }
jaeger = { path = "lib/jaeger", optional = true }
kubernetes = { path = "lib/kubernetes", optional = true }
log_schema = { path = "lib/log_schema" }
metrics = { path = "lib/metrics" }
multiline = { path = "lib/multiline", optional = true }
bytesize = { path = "lib/bytesize" }
ntp = { path = "lib/ntp", optional = true }
prometheus = { path = "lib/prometheus", optional = true }
sysinfo = { path = "lib/sysinfo", optional = true }
tail = { path = "lib/tail", optional = true }
tracked_alloc = { path = "lib/tracked_alloc", optional = true }
tripwire = { path = "lib/tripwire" }
value = { path = "lib/value" }
virt = { path = "lib/virt", optional = true }
vtl = { path = "lib/vtl" }

# Allocators
mimalloc = { version = "0.1.43", default-features = false, optional = true }
scudo = { git = "https://github.com/google/rust-scudo", rev = "0b2d15e4dce43c9dea1de55c5cf746130cb0849b", optional = true }
snmalloc-rs = { version = "0.3.8", optional = true, default-features = false, features = ["build_cc"] }
tikv-jemallocator = { version = "0.6.0", optional = true, features = ["unprefixed_malloc_on_supported_platforms"] }
tikv-jemalloc-ctl = { version = "0.6.0", optional = true, features = ["use_std"] }

# Futrures & Tokio
async-stream = { version = "0.3.6", optional = true }
async-trait = { version = "0.1.88", default-features = false }
futures = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
tokio = { version = "1.44.1", default-features = false, features = ["time", "net", "signal", "rt-multi-thread", "io-util"] }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-util = { version = "0.7.14", default-features = false, features = ["codec", "time", "net"] }

# Tracing
tracing = { version = "0.1.41", default-features = false }

# HTTP
hyper = { version = "1.6.0", default-features = false, features = ["server"] }
hyper-util = { version = "0.1.10", default-features = false, features = ["client"] }
http = { version = "1.3.1", default-features = false }
httpdate = { version = "1.0.3", default-features = false, optional = true }
http-body-util = { version = "0.1.3", default-features = false }

# Tower
tower = { version = "0.5.2", default-features = false }

# Serde
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_yaml = { version = "0.9.34", default-features = false }
serde_json = { version = "1.0.140", default-features = false }

# Protobuf
prost = { version = "0.13.5", default-features = false, features = ["std"] }
prost-types = { version = "0.13.5", default-features = false }

# Profile
pprof = { version = "0.14.0", default-features = false, optional = true, features = ["flamegraph", "prost-codec"] }

# Cli
argh = { version = "0.1.13", default-features = false, features = ["help"] }

# External libs
ahash = { version = "0.8.11", default-features = false, optional = true }
base64 = { version = "0.22.1", default-features = false, optional = true }
bytes = { version = "1.10.1", default-features = false }
chrono = { version = "0.4.40", default-features = false }
dashmap = { version = "6.1.0", default-features = false, optional = true }
encoding_rs = { version = "0.8.35", optional = true, features = ["serde"] }
exitcode = { version = "1.1.2" }
flate2 = { version = "1.1.0", optional = true }
gcra = { git = "https://github.com/f1shl3gs/gcra.git", rev = "c4011e32aa408947decf812dd6fa2eee7492be16", optional = true }
glob = { version = "0.3.2", default-features = false }
hickory-resolver = { version = "0.24.4", default-features = false, optional = true, features = ["system-config", "tokio-runtime"] }
indexmap = { version = "2.8.0", default-features = false, features = ["serde"] }
inventory = { version = "0.3.20", default-features = false }
k8s-openapi = { version = "0.24.0", default-features = false, optional = true, features = ["earliest"] }
kube = { version = "0.99.0", default-features = false, optional = true, features = ["client", "runtime", "rustls-tls"] }
libc = { version = "0.2.171", default-features = false, optional = true }
lru = { version = "0.13.0", default-features = false, optional = true }
maxminddb = { git = "https://github.com/f1shl3gs/maxminddb.git", rev = "eb9a6d1861cfe7313589c0e0281ddbb660a88962", optional = true, features = ["mmap", "unsafe-str"] }
md-5 = { version = "0.10.6", default-features = false, optional = true }
parking_lot = { version = "0.12.3", default-features = false, optional = true }
percent-encoding = { version = "2.3.1", default-features = false }
quick-xml = { version = "0.37.2", default-features = false, features = ["serialize"], optional = true }
rand = { version = "0.9.0", default-features = false }
regex = { version = "1.11.1", default-features = false }
rskafka = { git = "https://github.com/f1shl3gs/rskafka", rev = "7ee5c942a83d8a391794913ed7a012f5c33b6efb", optional = true, features = ["transport-tls"] }
sbbf = { git = "https://github.com/f1shl3gs/sbbf.git", rev = "d9e6fb1fa67f362491c0bd4da63fc727ef14f8f0", optional = true }
snap = { version = "1.1.1", default-features = false, optional = true }
socket2 = { version = "0.5.8", optional = true, default-features = false}
sqlx = { version = "0.8.3", default-features = false, optional = true, features = ["mysql", "runtime-tokio-rustls", "macros"] }
thiserror = { version = "2.0.12", default-features = false }
tonic = { version = "0.12.3", default-features = false, optional = true, features = ["prost"] }
tonic-health = { version = "0.12.3", default-features = false, optional = true }
typetag = { version = "0.2.20" }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", default-features = false, features = ["v4"], optional = true }
